--- a/.github/workflows/Agendador.yml
+++ b/.github/workflows/Agendador.yml
@@ -27,4 +27,5 @@ jobs:
         GMAIL_USER: ${{ secrets.GMAIL_USER }}
         GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        RECIPIENT_MAPPING: ${{ secrets.RECIPIENT_MAPPING }}
       run: python clipping.py
