--- a/.github/workflows/Agendador.yml
+++ b/.github/workflows/Agendador.yml
@@ -2,7 +2,7 @@ name: Agendador
 
 on:
   schedule:
-    - cron: "*/6 * * * *"  # Executa todos os dias às 03:00 UTC
+    - cron: "0 17 * * *"  # Execução as 14:00 horário de Brasília
   workflow_dispatch:     # Permite execução manual também (opcional)
 
 jobs:
